syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/passsquale/auth/pkg/user_v1;user_v1";

service ChatV1{
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message Message{
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message CreateRequest{
  repeated string usernames = 1;
}

message CreateResponse{
  int64 id = 1;
}

message DeleteRequest{
  int64 id = 1;
}

message SendMessageRequest{
  Message message = 1;
}